# will-i-suffocate

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  devenv.nix  docker-compose.yml
src/: main.rs
