[package]
name = "wison"
version = "0.1.0"
edition = "2021"

[dependencies]
aqi = "0.2.0"
reqwest = { version = "0.12.12", features = ["rustls-tls", "json", "gzip"], default-features = false}
serde = "1.0.217"
teloxide = { version = "0.13.0", features = ["macros", "rustls", "ctrlc_handler"], default-features = false}
tokio = { version = "1.42.0", features = ["full"] }
